# kernel

./: .editorconfig  Cargo.toml  debug.sh  shell.nix
.cargo/: config.toml
data/: logo.raw
src/: main.rs
src/allocator/: physical.rs
src/arch/: mod.rs  processor.rs
src/arch/boot/: logo.rs  mod.rs  x86_64_limine.rs
src/arch/devices/: framebuffer.rs
src/arch/x86_64/: intrinsics.rs  mod.rs
src/arch/x86_64/interrupts/: idt.rs  mod.rs
src/arch/x86_64/paging/: mod.rs  structs.rs
src/boot/: mod.rs  x86_64_limine.rs
src/common/: collections.rs  macros.rs  mem.rs  mod.rs  random.rs  sync.rs  time.rs
